# angry_wgpu_rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
shaders/: animation_shader.wgsl  bullet_shader.wgsl  common.wgsl  debug_depth_shader.wgsl  debug_shadow_shader.wgsl  debug_test_shader.wgsl  depth_shader.vert  floor_shader.wgsl  geom_shader.vert  instanced_shader.wgsl  instanced_texture_shader.vert  player_shader.frag  player_shader.vert  player_shader.wgsl  sprite_shader.wgsl  texture_emissive_shader.frag  wiggle_shader.wgsl  wiggly_shader.vert
src/: aabb.rs  anim_render.rs  bullets.rs  bullets_parallel.rs  burn_marks.rs  capsule.rs  enemy.rs  floor.rs  framebuffers.rs  game.rs  game_loop.rs  geom.rs  lighting.rs  main.rs  muzzle_flash.rs  player.rs  quads.rs  small_mesh.rs  sound_system.rs  sprite_sheet.rs  world.rs
src/lighting/: common.rs  floor_lighting.rs  mod.rs  player_lighting.rs
src/params/: common.rs  floor_lighting.rs  mod.rs  shader_params.rs
src/render/: anim_render.rs  buffers.rs  bullet_render.rs  debug_render.rs  enemy_render.rs  floor_render.rs  main_render.rs  mod.rs  player_render.rs  shader_loader.rs  shadow_map.rs  shadow_material.rs  sprite_render.rs  textures.rs
