[package]
name = "angry_wgpu_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
bytemuck = { version = "1.14.3", features = ["derive"] }
env_logger = "0.11.0"
glam = { version = "0.25.0", features = ["bytemuck"] }
hashbrown = "0.14.3"
image = { version = "0.24.8", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "tga",
    "hdr",
] }
itertools = "0.12.0"
log = "0.4.20"
once_cell = "1.19.0"
ordered-float = "4.2.0"
parking_lot = "0.12.1"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
quanta = "0.12.2"
rand = "0.8.5"
rayon = "1.8.1"
rodio = { version = "0.17.3", features = ["wav"] }
russimp = { path = "../russimp_glam" }
spark-gap = { path = "../spark-gap" }
tracing = "0.1.40"
web-time = "1.0.0"
wgpu = "0.19.1"
winit = "0.29.10"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

[lints.clippy]
enum_glob_use = "deny"
#pedantic = "deny"
#nursery = "deny"
#unwrap_used = "deny"


